metadata-classic/objects/becquerel_qs_bid_bids__x.object
<CustomObject>
    <description>becquerel__qs_bid_bids</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__qs_bid_bids</externalName>
    <fields>
        <fullName>bid_bid_id__c</fullName>
        <description>bid_bid_id</description>
        <externalDeveloperName>bid_bid_id</externalDeveloperName>
        <label>bid_bid_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_bid_pk__c</fullName>
        <description>bid_bid_pk</description>
        <externalDeveloperName>bid_bid_pk</externalDeveloperName>
        <label>bid_bid_pk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_buyer_first_seen_time__c</fullName>
        <description>bid_buyer_first_seen_time</description>
        <externalDeveloperName>bid_buyer_first_seen_time</externalDeveloperName>
        <label>bid_buyer_first_seen_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bid_create_time__c</fullName>
        <description>bid_create_time</description>
        <externalDeveloperName>bid_create_time</externalDeveloperName>
        <label>bid_create_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bid_estimate_price_per_unit__c</fullName>
        <description>bid_estimate_price_per_unit</description>
        <externalDeveloperName>bid_estimate_price_per_unit</externalDeveloperName>
        <label>bid_estimate_price_per_unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bid_estimate_type__c</fullName>
        <description>bid_estimate_type</description>
        <externalDeveloperName>bid_estimate_type</externalDeveloperName>
        <label>bid_estimate_type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_last_message_time__c</fullName>
        <description>bid_last_message_time</description>
        <externalDeveloperName>bid_last_message_time</externalDeveloperName>
        <label>bid_last_message_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bid_req_request_id__c</fullName>
        <description>bid_req_request_id</description>
        <externalDeveloperName>bid_req_request_id</externalDeveloperName>
        <label>bid_req_request_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_review_ask_time__c</fullName>
        <description>bid_review_ask_time</description>
        <externalDeveloperName>bid_review_ask_time</externalDeveloperName>
        <label>bid_review_ask_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bid_sav_available_service_id__c</fullName>
        <description>bid_sav_available_service_id</description>
        <externalDeveloperName>bid_sav_available_service_id</externalDeveloperName>
        <label>bid_sav_available_service_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_sent_time__c</fullName>
        <description>bid_sent_time</description>
        <externalDeveloperName>bid_sent_time</externalDeveloperName>
        <label>bid_sent_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bid_status__c</fullName>
        <description>bid_status</description>
        <externalDeveloperName>bid_status</externalDeveloperName>
        <label>bid_status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_status_time__c</fullName>
        <description>bid_status_time</description>
        <externalDeveloperName>bid_status_time</externalDeveloperName>
        <label>bid_status_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bid_status_usr_user_id__c</fullName>
        <description>bid_status_usr_user_id</description>
        <externalDeveloperName>bid_status_usr_user_id</externalDeveloperName>
        <label>bid_status_usr_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_url_code__c</fullName>
        <description>bid_url_code</description>
        <externalDeveloperName>bid_url_code</externalDeveloperName>
        <label>bid_url_code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bid_usr_user_id__c</fullName>
        <description>bid_usr_user_id</description>
        <externalDeveloperName>bid_usr_user_id</externalDeveloperName>
        <label>bid_usr_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phn_phone_number__c</fullName>
        <description>phn_phone_number</description>
        <externalDeveloperName>phn_phone_number</externalDeveloperName>
        <label>phn_phone_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>program__c</fullName>
        <description>program</description>
        <externalDeveloperName>program</externalDeveloperName>
        <label>program</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_name__c</fullName>
        <description>rca_name</description>
        <externalDeveloperName>rca_name</externalDeveloperName>
        <label>rca_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>req_needed_time__c</fullName>
        <description>req_needed_time</description>
        <externalDeveloperName>req_needed_time</externalDeveloperName>
        <label>req_needed_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>req_phn_phone_number_id__c</fullName>
        <description>req_phn_phone_number_id</description>
        <externalDeveloperName>req_phn_phone_number_id</externalDeveloperName>
        <label>req_phn_phone_number_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>req_rca_request_category_id__c</fullName>
        <description>req_rca_request_category_id</description>
        <externalDeveloperName>req_rca_request_category_id</externalDeveloperName>
        <label>req_rca_request_category_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>req_schedule_description__c</fullName>
        <description>req_schedule_description</description>
        <externalDeveloperName>req_schedule_description</externalDeveloperName>
        <label>req_schedule_description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>req_status__c</fullName>
        <description>req_status</description>
        <externalDeveloperName>req_status</externalDeveloperName>
        <label>req_status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>req_url_code__c</fullName>
        <description>req_url_code</description>
        <externalDeveloperName>req_url_code</externalDeveloperName>
        <label>req_url_code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>req_usr_user_id__c</fullName>
        <description>req_usr_user_id</description>
        <externalDeveloperName>req_usr_user_id</externalDeveloperName>
        <label>req_usr_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>req_usr_user_pk__c</fullName>
        <description>req_usr_user_pk</description>
        <externalDeveloperName>req_usr_user_pk</externalDeveloperName>
        <label>req_usr_user_pk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_first_name__c</fullName>
        <description>usr_first_name</description>
        <externalDeveloperName>usr_first_name</externalDeveloperName>
        <label>usr_first_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_last_name__c</fullName>
        <description>usr_last_name</description>
        <externalDeveloperName>usr_last_name</externalDeveloperName>
        <label>usr_last_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>becquerel__qs_bid_bids</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>becquerel__qs_bid_bids</pluralLabel>
</CustomObject>